# pop3d

./: .travis.yml  CHANGELOG.md  README.md  pop3d.cabal  stack.yaml
.github/workflows/: build-ci.yml
src/: Image.hs
src/Geometry/: Mesh.hs
src/Geometry/Mesh/: Base.hs  Box.hs  Internal.hs  Mesh.hs  Ray.hs  Transform.hs  Triangle.hs
src/Geometry/Mesh/Accelerator/: Base.hs  BoundingVolumeHierarchy.hs  Naive.hs
src/Geometry/Mesh/Parser/: Base.hs  ObjParser.hs
