name:                pop3d
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KommuSoft/pop3d#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexteu+gh@gmail.com
copyright:           2020 Willem Van Onsem
category:            utils
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Geometry.Mesh
    , Geometry.Mesh.Base
    , Geometry.Mesh.Box
    , Geometry.Mesh.Mesh
    , Geometry.Mesh.Ray
    , Geometry.Mesh.Transform
    , Geometry.Mesh.Triangle
    , Geometry.Mesh.Accelerator.Base
    , Geometry.Mesh.Accelerator.Naive
    , Geometry.Mesh.Accelerator.BoundingVolumeHierarchy
  other-modules:
      Geometry.Mesh.Internal
  build-depends:
      base >= 4.7 && < 5
    , data-default >=0.1
    , linear >=0.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KommuSoft/pop3d
